[project]
name = "zhixin"
version = "0.1.0"
description = "news-fetcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "markdown>=3.8.2",
]

[project.scripts]
news_fetcher = "news_fetcher.main:run"
run_crew = "news_fetcher.main:run"
train = "news_fetcher.main:train"
replay = "news_fetcher.main:replay"
test = "news_fetcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
